--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+# datasource PostgreSQl
+spring.sql.init.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/springboot
+spring.datasource.username=springboot
+spring.datasource.password=springboot
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+# jpa
+spring.jpa.database=postgresql
+spring.jpa.show-sql=true
+
+# generate schema dll to create tables
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
+spring.sql.init.mode=always
+
+# hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
