--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,9 @@ spring.jpa.show-sql=true
 
 # generate schema dll to create tables
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
 spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.defer-datasource-initialization=true
 
 # hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
